Bug 432433 - canvas input settings not kept between sessions ,after each restart of the app the shortcuts reset to default values
Summary: canvas input settings not kept between sessions ,after each restart of the ap...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: 4.4.2
Platform: Android Android 11.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-02 20:56 UTC by barberapali
Modified: 2021-02-23 08:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description barberapali 2021-02-02 20:56:31 UTC
SUMMARY

If i change the shortcuts in the canvas input settings dialog, the changes are not restored after i close and reopen krita ( for instance i would like to alt +click for color picker instead of default ctrl+click , or use a key combo for the popup palette since default right click is slower on android ).All the shortcuts are set back to default values.
Also any additional input profiles created are missing from the dropdown menu.

Tested on samsung galaxy tabs7+ on android 10 and 11.
I had the same issues in previous versions of krita and also on my old galaxy tab s3, i can no longer test it on that though.

STEPS TO REPRODUCE
1.open krita 
2.set a custom shortcut for anything in the canvas input section (alt+x for show popup palette)
3. Ok to confirm
4.test the alt+x combo it works fine
5.close Krita
6.reopen krita
7.previously set shortcuts do no longer work , check back the preferences and see that they got restored to default values

OBSERVED RESULT
canvas input settings are not kept between sessions

EXPECTED RESULT
custom shortcuts set in the canvas input settings should be kept between sessions

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Krita


 Version: 4.4.2

 Languages: C

 Hidpi: true


Qt


  Version (compiled): 5.12.9

  Version (loaded): 5.12.9


OS Information


  Build ABI: arm64-little_endian-lp64

  Build CPU: arm64

  CPU: arm64

  Kernel Type: linux

  Kernel Version: 4.19.113-20748183

  Pretty Productname: Android  (11.0)

  Product Type: android

  Product Version: 11.0

  Desktop: 


OpenGL Info

 

  Vendor:  "Qualcomm" 

  Renderer:  "Adreno (TM) 650" 

  Version:  "OpenGL ES 3.2 V@0502.0 (GIT@7c6959d1f7, Ifdda647016, 1599142814) (Date:09/03/20)" 

  Shading language:  "OpenGL ES GLSL ES 3.20" 

  Requested format:  QSurfaceFormat(version 2.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 

  Current format:    QSurfaceFormat(version 3.2, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DefaultSwapBehavior, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 

     Version: 3.2

     Supports deprecated functions false 

     is OpenGL ES: true 


QPA OpenGL Detection Info 

  supportsDesktopGL: false 

  supportsOpenGLES: true 

  isQtPreferOpenGLES: true 


Hardware Information


  GPU Acceleration: angle

  Memory: 5562 Mb

  Number of Cores: 8

  Swap Location: /data/user/0/org.krita/files


Current Settings


  Current Swap Location: /data/user/0/org.krita/files

  Current Swap Location writable: true

  Undo Enabled: true

  Undo Stack Limit: 30

  Use OpenGL: true

  Use OpenGL Texture Buffer: true

  Use AMD Vectorization Workaround: false

  Canvas State: OPENGL_SUCCESS

  Autosave Interval: 900

  Use Backup Files: true

  Number of Backups Kept: 1

  Backup File Suffix: ~

  Backup Location: Same Folder as the File

  Backup Location writable: false

  Use Win8 Pointer Input: false

  Use RightMiddleTabletButton Workaround: false

  Levels of Detail Enabled: false

  Use Zip64: false



Display Information

Number of screens: 1

    Screen: 0

        Name: 

        Depth: 32

        Scale: 1.31253

        Resolution in pixels: 2133x1287

        Manufacturer: 

        Model: 

        Refresh Rate: 60


Current Settings


  Current Swap Location: /data/user/0/org.krita/files

  Current Swap Location writable: true

  Undo Enabled: true

  Undo Stack Limit: 30

  Use OpenGL: true

  Use OpenGL Texture Buffer: true

  Use AMD Vectorization Workaround: false

  Canvas State: OPENGL_SUCCESS

  Autosave Interval: 900

  Use Backup Files: true

  Number of Backups Kept: 1

  Backup File Suffix: ~

  Backup Location: Same Folder as the File

  Backup Location writable: false

  Use Win8 Pointer Input: false

  Use RightMiddleTabletButton Workaround: false

  Levels of Detail Enabled: false

  Use Zip64: false
Comment 1 sh_zam 2021-02-03 09:20:44 UTC
Git commit 7e1d6f591ea0d0a29ad07888de23b863622dedb6 by Sharaf Zaman.
Committed on 03/02/2021 at 09:12.
Pushed by szaman into branch 'master'.

Android: saved configs aren't loaded after restart

M  +6    -0    libs/resources/KoResourcePaths.cpp

https://invent.kde.org/graphics/krita/commit/7e1d6f591ea0d0a29ad07888de23b863622dedb6
Comment 2 sh_zam 2021-02-23 08:51:43 UTC
Git commit 6a917705deb5d96155c957611638ffadd70aca93 by Sharaf Zaman.
Committed on 23/02/2021 at 08:19.
Pushed by szaman into branch 'krita/4.3'.

Android: saved configs aren't loaded after restart
(cherry picked from commit 7e1d6f591ea0d0a29ad07888de23b863622dedb6)

M  +6    -0    libs/widgetutils/KoResourcePaths.cpp

https://invent.kde.org/graphics/krita/commit/6a917705deb5d96155c957611638ffadd70aca93