Android: saved configs aren't loaded after restart

BUG:432433
(cherry picked from commit 7e1d6f591ea0d0a29ad07888de23b863622dedb6)